--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.3",
     "postcss-cli": "^4.1.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.0"
   }
 }
